proxies / websites: add qa.stg to serveraliases for qa
Right now staging doesn't know it should be answering for
qa.stg.fedoraproject.org only qa.fedoraproject.org, so it needs to know
this to allow access to staging qa hosts.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -784,6 +784,7 @@
 
   - role: httpd/website
     site_name: qa.fedoraproject.org
+    server_aliases: [qa.stg.fedoraproject.org]
     cert_name: "{{wildcard_cert_name}}"
     sslonly: true
 
