--- a/roles/distgit/tasks/main.yml
+++ b/roles/distgit/tasks/main.yml
@@ -131,6 +131,7 @@
     state: present
   tags:
   - distgit
+  when: inventory_hostname.startswith('batcave')
 
 - name: Make sure apache can access the fedora-messasing crt
   acl:
@@ -141,6 +142,7 @@
     state: present
   tags:
   - distgit
+  when: inventory_hostname.startswith('batcave')
 
 - name: Make sure apache can access the fedora-messasing key
   acl:
@@ -151,6 +153,7 @@
     state: present
   tags:
   - distgit
+  when: inventory_hostname.startswith('batcave')
 
 - name: create the distgit root directory (/srv/git)
   file: dest=/srv/git state=directory mode=0755
