proxies / redirects: if you use env_suffix in the sitename, you MUST use it in redirects too
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -835,7 +835,7 @@
 
   - role: httpd/redirect
     shortname: 00-coreosbuild
-    website: "builds.coreos.fedoraproject.org"
+    website: "builds.coreos{{ env_suffix }}.fedoraproject.org"
     path: /
     target: https://builds.coreos.fedoraproject.org/browser
     tags:
