pagure / pkgs: drop provenpackager excludes on firefox, thunderbird, xulrunner
See https://pagure.io/fedora-infrastructure/issue/9557
Basically we don't need to block commits here anymore,
maintainers are confident they can prevent anything going out that
causes problems for the firefox name. Additionally, xulrunner was
retired a long time ago.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -105,7 +105,7 @@ SSH_COMMAND_NON_REPOSPANNER = ([
 EXTERNAL_COMMITTER = {
     'cvsadmin': {},
     'provenpackager': {
-        'exclude': ['rpms/xulrunner', 'rpms/thunderbird', 'rpms/firefox']
+        'exclude': []
     }
 }
 
