--- a/roles/openshift-apps/release-monitoring/templates/configmap.yml
+++ b/roles/openshift-apps/release-monitoring/templates/configmap.yml
@@ -21,8 +21,8 @@ items:
       {{ load_file('httpd.conf') | indent(6) }}
     anitya.wsgi: |-
       {{ load_file('anitya.wsgi') | indent(6) }}
-    wait_for_web_service: |-
-      {{ load_file('wait_for_web_service.sh') | indent(6) }}
+    check_db.py: |-
+      {{ load_file('check_db.py') | indent(6) }}
 - apiVersion: v1
   kind: ConfigMap
   metadata:
