The IPA HBAC rule for sysadmin-main should apply on all hosts
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/ipa/client/tasks/hbac.yml
+++ b/roles/ipa/client/tasks/hbac.yml
@@ -38,6 +38,7 @@
   ipahbacrule:
     name: "group/sysadmin-main"
     description: "Give members of group sysadmin-main shell access anywhere"
+    hostcategory: "all"
     ipaadmin_password: "{{ ipa_admin_password }}"
     state: present
     group:
