--- a/roles/openshift-apps/monitor-dashboard/templates/postgrest_deploymentconfig.yml
+++ b/roles/openshift-apps/monitor-dashboard/templates/postgrest_deploymentconfig.yml
@@ -32,5 +32,7 @@ spec:
           value: "datanommer_ro"
         - name: "PGRST_MAX_ROWS"
           value: "25"
+        - name: "PGRST_OPENAPI_SERVER_PROXY_URI"
+          value: "https://postgrest-monitor-dashboard.app.os.fedoraproject.org/"
   triggers:
   - type: ConfigChange
