mbs: add ipa/client role
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/mbs.yml
+++ b/playbooks/groups/mbs.yml
@@ -18,6 +18,7 @@
   - rkhunter
   - nagios_client
   - hosts
+  - ipa/client
   - { role: fas_client, when: env != "staging" }
   - rsyncd
   - sudo
