--- a/tasks/cloud_setup_basic.yml
+++ b/tasks/cloud_setup_basic.yml
@@ -15,7 +15,7 @@
   dnf:
     state: present
     pkg: 
-    - ntpdate
+    - chrony
     - libselinux-python
   when: ansible_distribution_major_version|int > 7 and ansible_distribution == 'RedHat' and ansible_cmdline.ostree is not defined
   tags:
