ipa/client: Let sysadmin-main use all services
It would be embarrassing to lock ourselves out.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/hbac.yml
+++ b/roles/ipa/client/tasks/hbac.yml
@@ -67,7 +67,7 @@
     name: "{{ item }}"
     state: present
     ipaadmin_password: "{{ ipa_admin_password }}"
-  loop: "{{ ['sysadmin-main'] + (ipa_client_shell_groups | default([])) | list }}"
+  loop: "{{ (ipa_client_shell_groups | default([])) | list }}"
 
 - name: "Give certain groups shell access on {{ ansible_fqdn }}"
   ipahbacrule:
