Use a template for ipsilon's sssd.conf instead of replacing lines
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/ipsilon/tasks/main.yml
+++ b/roles/ipsilon/tasks/main.yml
@@ -308,22 +308,13 @@
   tags:
   - ipsilon
 
-- name: configure SSSd to forward additional attributes (1/2)
-  replace:
-    path: /etc/sssd/sssd.conf
-    regexp: ^ldap_user_extra_attrs = [\w,\s]+$
-    replace: ldap_user_extra_attrs = mail, street, locality, st, postalCode, telephoneNumber, givenname, sn, fasTimeZone, fasLocale, fasIRCNick, fasGPGKeyId, fasCreationTime, fasStatusNote, fasRHBZEmail, fasGitHubUsername, fasGitLabUsername, fasWebsiteURL, fasIsPrivate, ipaSshPubKey
-  tags:
-  - ipsilon
-  - config
-  notify:
-  - restart sssd
-
-- name: configure SSSd to forward additional attributes (2/2)
-  replace:
-    path: /etc/sssd/sssd.conf
-    regexp: ^user_attributes = [\w,\s+]+$
-    replace: user_attributes = +mail, +street, +locality, +st, +postalCode, +telephoneNumber, +givenname, +sn, +fasTimeZone, +fasLocale, +fasIRCNick, +fasGPGKeyId, +fasCreationTime, +fasStatusNote, +fasRHBZEmail, +fasGitHubUsername, +fasGitLabUsername, +fasWebsiteURL, +fasIsPrivate, +ipaSshPubKey
+- name: copy SSSd configuration
+  template:
+    src: sssd.conf
+    dest: /etc/sssd/sssd.conf
+    owner: root
+    group: root
+    mode: 0600
   tags:
   - ipsilon
   - config
