--- a/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
+++ b/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
@@ -70,6 +70,8 @@ items:
 {% if env == 'staging' %}
         RUN sed -i 's/id.fedoraproject.org/id.stg.fedoraproject.org/g' /usr/lib/python3.8/site-packages/social_core/backends/fedora.py
 {% endif %}
+        # Let's see if we are using correct data
+        RUN echo $(ls -l /usr/local/lib/python3.8/site-packages/anitya/db/migrations/versions/)
         RUN mkdir /httpdir
         RUN chmod 777 /httpdir
         EXPOSE 8080
