--- a/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
+++ b/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
@@ -44,7 +44,7 @@ items:
                 python3-wtforms && \
             dnf autoremove -y && \
             dnf clean all -y
-        RUN git clone https://github.com/fedora-infra/anitya.git && \
+        RUN echo $(git clone https://github.com/fedora-infra/anitya.git && \
                 pushd anitya && \
 {% if env == 'staging' %}
                 git checkout staging && \
@@ -65,13 +65,11 @@ items:
                 pip-3 install . && \
                 popd && \
                 popd && \
-                rm -rf anitya
+                rm -rf anitya)
         # Let's use staging auth server in staging
 {% if env == 'staging' %}
         RUN sed -i 's/id.fedoraproject.org/id.stg.fedoraproject.org/g' /usr/lib/python3.8/site-packages/social_core/backends/fedora.py
 {% endif %}
-        # Let's see if we are using correct data
-        RUN echo $(ls -l /usr/local/lib/python3.8/site-packages/anitya/db/migrations/versions/)
         RUN mkdir /httpdir
         RUN chmod 777 /httpdir
         EXPOSE 8080
