pagure: send the logs to stderr instead of stdout
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/pagure/templates/pagure.cfg
+++ b/roles/pagure/templates/pagure.cfg
@@ -257,7 +257,7 @@ LOGGING = {
         'console': {
             'formatter': 'standard',
             'class': 'logging.StreamHandler',
-            'stream': 'ext://sys.stdout',
+            'stream': 'ext://sys.stderr',
         },
         'email': {
             'level': 'ERROR',
