Don't flag checking task as changed
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/hbac.yml
+++ b/roles/ipa/client/tasks/hbac.yml
@@ -2,6 +2,7 @@
 
 - name: Check that sysadmin-main group exists
   command: "ipa group-show --no-members sysadmin-main"
+  changed_when: False
 
 - name: "Give members of group sysadmin-main access to anything, anywhere"
   ipahbacrule:
