copr-be: configure lighttpd to respond on ipv6, too

--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -108,7 +108,7 @@ server.port = 80
 ##
 ## Use IPv6?
 ##
-server.use-ipv6 = "disable"
+server.use-ipv6 = "enable"
 
 ##
 ## bind to a specific IP
@@ -466,7 +466,7 @@ server.upload-dirs = ( "/var/tmp" )
 
 {% if not devel %}
 # production still uses normal configuration
-$SERVER["socket"] == ":443" {
+$SERVER["socket"] == "0.0.0.0:443" {
   ssl.engine = "enable"
   ssl.pemfile = "/etc/lighttpd/copr.fedorainfracloud.org.pem"
   ssl.ca-file = "/etc/lighttpd/copr.fedorainfracloud.org.intermediate.crt"
@@ -485,7 +485,7 @@ $HTTP["url"] =~ "^/.well-known/" {
 }
 
 # Enable HTTPS
-$SERVER["socket"] == ":443" {
+$SERVER["socket"] == "0.0.0.0:443" {
     ssl.engine              = "enable"
 {% for hostname, _ in letsencrypt.certificates.items()  %}
     ssl.ca-file             = "/etc/letsencrypt/live/{{ hostname }}/chain.pem"
