zezere: use netboot for probes
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/roles/openshift-apps/zezere/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/zezere/templates/deploymentconfig.yml
@@ -76,13 +76,13 @@ spec:
           timeoutSeconds: 1
           initialDelaySeconds: 5
           httpGet:
-            path: /
+            path: /netboot
             port: 8080
         livenessProbe:
           timeoutSeconds: 1
           initialDelaySeconds: 30
           httpGet:
-            path: /
+            path: /netboot
             port: 8080
   triggers:
   - type: ConfigChange
