Zezere is now main branch
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/roles/openshift-apps/zezere/files/buildconfig.yml
+++ b/roles/openshift-apps/zezere/files/buildconfig.yml
@@ -9,7 +9,7 @@ spec:
   source:
     git:
       uri: https://github.com/fedora-iot/zezere.git
-      ref: master
+      ref: main
   strategy:
     sourceStrategy:
       env:
