ipa/client: Set `config` tag in main playbook
This avoids having to add the tag to every individual task (or
forgetting it).

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -29,6 +29,7 @@
   when: env == 'staging'
   tags:
     - ipa/client
+    - config
 
 - name: Configure sudo on IPA cluster
   delegate_to: "{{ ipa_server }}"
@@ -37,3 +38,4 @@
   when: env == 'staging'
   tags:
     - ipa/client
+    - config
