ipa/client: Always warn about `fas_client_groups`
The `fas_client_groups` and `ipa_client_shell_groups` variables have a
different format, the former is a comma-separated string, the latter a
list. Nag about it with more detail and regardless of if
`ipa_client_shell_groups` is set, because if it is, then the old
variable gets ignored.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/hbac.yml
+++ b/roles/ipa/client/tasks/hbac.yml
@@ -42,11 +42,11 @@
 
 # shell access
 
-- name: "Warn if `fas_client_groups` is set but `ipa_client_shell_groups` isn't"
+- name: "Warn if `fas_client_groups` is set"
   fail:
-    msg: "`fas_client_groups` is defined but `ipa_client_shell_groups` isn't on an IPA client"
+    msg: "`fas_client_groups` is defined, should be converted to a list and named `ipa_client_shell_groups`"
   ignore_errors: true
-  when: fas_client_groups is defined and ipa_client_shell_groups is not defined
+  when: fas_client_groups is defined
 
 - name: "Convert `fas_client_groups` string to `ipa_client_shell_groups` list if missing"
   set_fact:
