--- a/roles/ipa/client/tasks/common.yml
+++ b/roles/ipa/client/tasks/common.yml
@@ -3,3 +3,20 @@
 - name: Check that sysadmin-main group exists
   command: "getent group sysadmin-main"
   changed_when: False
+
+## Rules specific to hosts, host groups
+
+- name: Ensure IPA host group exists
+  ipahostgroup:
+    name: "{{ ipa_host_group }}"
+    description: "{{ ipa_host_group_desc | default(ipa_host_group) }}"
+    ipaadmin_password: "{{ ipa_admin_password }}"
+    state: present
+
+- name: Ensure host is in IPA host group
+  ipahostgroup:
+    name: "{{ ipa_host_group }}"
+    ipaadmin_password: "{{ ipa_admin_password }}"
+    action: member
+    state: present
+    host: "{{ ansible_fqdn }}"
