copr-be: re-enable port 80
The socket statement for :80 needs to be configured, otherwise http://
doesn't work at all.

f025f0cc31e2b847d3b644620a236c6a50e6a386

--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -500,6 +500,8 @@ $SERVER["socket"] == "0.0.0.0:443" {
 }
 {% endif %}
 
+$SERVER["socket"] == "0.0.0.0:80" {}
+
 url.redirect               = ( "^/results/sgallagh/cockpit-preview/(.+)" => "/results/@cockpit/cockpit-preview/$1" )
 
 url.redirect += ( "^/results/(.*)/(.*)/mageia-(.*)-i386(.*)" => "/results/$1/$2/mageia-$3-i586$4" )
