--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: packager-dashboard
-    service: packager-dashboard
-  name: packager-dashboard-api-endpoint
+    app: oraculum
+    service: oraculum
+  name: oraculum-api-endpoint
 spec:
   replicas: 1
   selector:
-    app: packager-dashboard
-    deploymentconfig: packager-dashboard
+    app: oraculum
+    deploymentconfig: oraculum
   strategy:
     type: Recreate
     recreateParams:
@@ -27,11 +27,11 @@ spec:
   template:
     metadata:
       labels:
-        app: packager-dashboard
-        deploymentconfig: packager-dashboard
+        app: oraculum
+        deploymentconfig: oraculum
     spec:
       containers:
-      - name: packager-dashboard
+      - name: oraculum
         image: packager-dashboard:latest
         ports:
         - containerPort: 5000
