--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -17,7 +17,7 @@ spec:
       mid:
         failurePolicy: Abort
         execNewPod:
-          containerName: oraculum-frontend
+          containerName: oraculum-api-endpoint
           # Oraculum would automatically proceed with upgrade_db if necessary
           # init_db isn't dropping anything, so it's safe to call every time the pod starts
           command: ["python", "/opt/app-root/src/oraculum/cli.py", "init_db"]
