oraculum: Try a different container name

--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -92,7 +92,7 @@ spec:
     imageChangeParams:
       automatic: true
       containerNames:
-      - packager-dashboard
+      - oraculum-api-endpoint
       from:
         kind: ImageStreamTag
         name: packager-dashboard:latest
